2011-04-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* common.make: Updated comments.
	
2011-04-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Updated comments.
	* configure: Regenerated using the latest autoconf (2.68).

2011-04-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* TestFramework/gnustep-tests.in: Do not add MAKEFLAGS on a
	sub-make command-line.  This fixes 'make messages=yes check' on
	the top-level of gnustep-base, for example.

2011-04-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Use AC_COMPILE_IFELSE instead of AC_TRY_IFELSE
	when checking for compiler support for native Objective-C
	exceptions.  Do not check the type or version of the compiler
	during the check; only check that it can compile
	@try/@throw/@catch.  Updated check and documentation.
	* configure: Updated.
	
2011-04-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Use AC_COMPILE_IFELSE instead of AC_TRY_IFELSE
	when checking for -fobjc-nonfragile-abi support in the compiler.
	* configure: Updated.

2011-04-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Use AC_COMPILE_IFELSE instead of AC_TRY_IFELSE
	when checking for ObjC++ support in the compiler.
	* configure: Updated.
	
2011-04-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	Use 'make check GNUSTEP_TEST_OBJCXX=yes' to enable ObjC++
	testcases when using the test framework.
	* TestFramework/gnustep-tests.in: Recognize GNUSTEP_TEST_OBJCXX,
	and reworked choosing the ObjC++ compiler accordingly.

2011-04-08  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Set OBJCXX to ${CXX}, not to the literal CXX.
	* configure: Updated.

2011-04-08  Riccardo Mottola  <rm@gnu.org>

	* target.make: Override gcc's default relax option sent to the
	linker in case of relative linking -Wl,-r.  This should affect
	only SPARC and a few others uncommon archs and be ignored on the
	others.
