@@ -229,3 +229,8 @@ GCC_WITH_PRECOMPILED_HEADERS = @GCC_WITH_PRECOMPILED_HEADERS@
 # be an absolute path.
 #
 GNUSTEP_ABSOLUTE_INSTALL_PATHS = @GNUSTEP_ABSOLUTE_INSTALL_PATHS@
+
+#
+# Whether to use -r or -Wl,-r when doing partial linking
+#
+OBJ_MERGE_CMD_FLAG = @OBJ_MERGE_CMD_FLAG@
